# CI_CD_Base_Farm

./: .gitignore  CMakeLists.txt  lib.cpp  main.cpp  version.h.in  version_test.cpp
.github/: release.yml
.github/workflows/: realease.yml
test/: version_test.cpp
